# graphRAG

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  instructions.md  pyproject.toml
.github/workflows/: keep-alive.yml
data/: corpus.jsonl
scripts/: build_graph.py  build_index.py  build_report.py  check_connections.py  keep_alive.py  prepare_data.py  prune_orphaned_graph_passages.py  prune_orphaned_vector_points.py  run_baseline.py  run_eval.py  run_extraction.py
src/graphrag/: config.py  deepseek_common.py  schemas.py
src/graphrag/api/: main.py
src/graphrag/data/: build_corpus.py  download.py
src/graphrag/eval/: metrics.py  report.py  run_baseline.py  run_eval.py  runner.py
src/graphrag/extraction/: deepseek_client.py  prompt.py  run_extraction.py
src/graphrag/generation/: deepseek_generator.py  deepseek_prompt.py  gemini_client.py
src/graphrag/graph/: build.py  neo4j_client.py
src/graphrag/orchestration/: graph.py
src/graphrag/retrieval/: graph_retriever.py  hybrid.py  vector_retriever.py
src/graphrag/vector/: embedder.py  qdrant_store.py
tests/: test_build_corpus.py  test_graph_helpers.py  test_metrics.py  test_retrieval.py  test_schemas.py
web/src/app/: layout.tsx  page.tsx
web/src/app/api/query/: route.ts
web/src/components/chat/: chat-input.tsx  chat-window.tsx  message-bubble.tsx
web/src/lib/: types.ts
