[project]
name = "graphrag"
version = "0.1.0"
description = "Agentic GraphRAG (Neo4j + Qdrant + LangGraph) evaluated on 2WikiMultiHopQA"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "langgraph==0.2.76",
    "langchain-core==0.3.86",
    "fastapi==0.115.14",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.13.1",
    "neo4j==5.28.4",
    "qdrant-client==1.18.0",
    "sentence-transformers==3.4.1",
    "openai==1.109.1",
    "google-genai==0.8.0",
    "tenacity==9.1.4",
    "datasets==3.6.0",
    "tqdm==4.69.0",
    "python-dotenv==1.2.2",
    "numpy==2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
